# 1724-Rust-Project

./: .gitignore  API.md  Cargo.toml  GETTING_STARTED.md  LICENSE  PROJECT_COMPLETION.md  README-dev.md  README.md  config.example.toml  docker-compose.yml  package-lock.json  postman_collection.json  readme.md  sessions.db  sessions.json  test.sh  test_api.ps1  test_chat.ps1
docker/: .dockerignore  Dockerfile  Dockerfile.cuda  README.md  docker-compose.yml  prometheus.yml
docs/: API_REFERENCE.md  PROJECT_DOCUMENTATION.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App-backup.tsx  App.tsx  index.css
frontend/src/components/: ChatContainer.tsx  Message.tsx  Sidebar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/store/: chatStore.ts
public/: index.html
scripts/: test-rate-limit.ps1
src/: config.rs  engine.rs  engine_mock.rs  lib.rs  main.rs  middleware.rs  model_inference.rs  models.rs  parse.rs  routes.rs  state.rs
tests/: common.rs  config_tests.rs  engine_error_handling.rs  integration_tests.rs  middleware_tests.rs  negative_cases.rs  parse_edge_cases.rs  routes_integration.rs
