[package]
name = "llm_inference"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
tokenizers = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
axum = "0.6"
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.20"
async-stream = "0.3"
hyper = { version = "0.14", features = ["full"] }
tower = "0.5.2"
